# binance_websocket

./: Cargo.toml  README.md
src/: config.rs  lib.rs  logger.rs  main.rs  routes.rs
src/db/: mod.rs  trade_stats.rs
src/models/: mod.rs  trade.rs
src/repo/: insert_trade_stats.rs  mod.rs
src/server/: mod.rs  trade_stats_server.rs
src/strategies/: mod.rs  order_flow.rs
src/websockets/: binance.rs  mod.rs
src/works/: aggregator.rs  binance_worker.rs  mod.rs
