[lib]
name = "binance_websocket"
path = "src/lib.rs"

[package]
name = "binance_websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }

futures = "0.3"

# reqwest = { version = "0.11", features = ["json"] }

# # solana-client = "1.18"
# # solana-sdk = "1.18"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "json","bigdecimal"] }
# anyhow = "1.0"

# # yellowstone-grpc-client = "0.1" # 需从 GitHub 引入

# # teloxide = "0.12" # bot，提醒
# chrono = "0.4" # 时间戳

# config = "0.14"
# dotenv = "0.15"

# # 高级数
rust_decimal = { version = "1", features = ["serde-with-str"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
